--- a/src/style.css
+++ b/src/style.css
@@ -1,6 +1,20 @@
-.grid {
+body {
+  background-color: rgba(173, 87, 253, 0.295);
+}
+
+h3 {
+  text-align: center;
+  font-size: 36px;
+  color: rgb(108, 29, 182);
+}
+
+#grid {
   width: 400px;
   height: 300px;
   display: flex;
   flex-wrap: wrap;
+  margin: 100px;
+  margin-left: 200px;
+  border: ridge;
+  border-color: rgb(108, 29, 182);
 }
